--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,10 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [macOS-latest, macOS-11]
-        swift-version: ["5.3", "5.3.2"]
+        swift-version: ["5.3.3", "5.4.2"]
+        include:
+          - operating-system: macOS-11
+          - swift-version: "5.5"
     runs-on: ${{ matrix.operating-system }}
     steps:
       - uses: actions/checkout@v2
@@ -37,8 +40,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [macOS-latest, macOS-11]
-        xcode-version: ["12.0.1", "12.5.1"]
+        operating-system: [macOS-11]
+        xcode-version: ["12.3", "12.4", "12.5.1"]
         xcode-destination: [
           "platform=OS X,arch=x86_64",
           "platform=OS X,arch=x86_64,variant=Mac Catalyst",
