--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [macOS-11]
-        xcode-version: ["12.3", "12.4", "12.5.1"]
+        xcode-version: ["12.3", "12.5.1"]
         xcode-destination: [
           "platform=OS X,arch=x86_64",
           "platform=OS X,arch=x86_64,variant=Mac Catalyst",
