--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,18 +38,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [macOS-11]
-        xcode-version: ["12.3", "12.5.1"]
-        xcode-destination: [
-          "platform=OS X,arch=x86_64",
-          "platform=OS X,arch=x86_64,variant=Mac Catalyst",
-          "platform=iOS Simulator,name=iPhone 12 Pro,OS=latest",
-          "platform=tvOS Simulator,name=Apple TV 4K,OS=latest",
-          "platform=watchOS Simulator,name=Apple Watch Series 6 - 44mm,OS=latest",
-        ]
-        include:
-          - operating-system: macOS-11
-            xcode-version: "13"
-            xcode-destination: "platform=iOS Simulator,name=iPhone 12 Pro,OS=latest"
+        xcode-version: ["12.3", "12.5.1", "13"]
     runs-on: ${{ matrix.operating-system }}
     steps:
       - uses: actions/checkout@v2
@@ -63,6 +52,16 @@ jobs:
       - name: Resolve Package Dependencies
         run: xcodebuild -resolvePackageDependencies
       - name: Analyze
-        run: xcodebuild -scheme swift-zip -destination '${{ matrix.xcode-destination }}' analyze
+        run: |
+          xcodebuild -scheme swift-zip \
+            -destination "platform=iOS Simulator,name=iPhone 12 Pro,OS=latest" \
+            -destination "platform=tvOS Simulator,name=Apple TV 4K,OS=latest" \
+            -destination "platform=watchOS Simulator,name=Apple Watch Series 6 - 44mm,OS=latest" \
+            analyze
       - name: Test
-        run: xcodebuild -scheme swift-zip -destination '${{ matrix.xcode-destination }}' test
+        run: |
+          xcodebuild -scheme swift-zip \
+            -destination "platform=iOS Simulator,name=iPhone 12 Pro,OS=latest" \
+            -destination "platform=tvOS Simulator,name=Apple TV 4K,OS=latest" \
+            -destination "platform=watchOS Simulator,name=Apple Watch Series 6 - 44mm,OS=latest" \
+            test
