--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [macOS-11]
-        xcode-version: ["12.3", "12.5.1", "13"]
+        xcode-version: ["12.4", "12.5.1", "13 beta 5"]
     runs-on: ${{ matrix.operating-system }}
     steps:
       - uses: actions/checkout@v2
