--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [macOS-11]
-        xcode-version: ["12.5.1", "13 beta 5"]
+        xcode-version: ["12.5.1"]
     runs-on: ${{ matrix.operating-system }}
     steps:
       - uses: actions/checkout@v2
@@ -51,7 +51,7 @@ jobs:
           apple-id-password: ${{ secrets.APPLE_ID_PASSWORD }}
       - name: Resolve Package Dependencies
         run: xcodebuild -resolvePackageDependencies
-      - name: Analyze
+      - name: Build with Analyze
         run: |
           xcodebuild -scheme swift-zip \
             -destination "platform=iOS Simulator,name=iPhone 12 Pro,OS=latest" \
@@ -64,4 +64,5 @@ jobs:
             -destination "platform=iOS Simulator,name=iPhone 12 Pro,OS=latest" \
             -destination "platform=tvOS Simulator,name=Apple TV 4K (2nd generation),OS=latest" \
             -destination "platform=watchOS Simulator,name=Apple Watch Series 6 - 44mm,OS=latest" \
+            -retry-tests-on-failure \
             test-without-building
