Use iPhone 12 Simulator

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,14 +54,14 @@ jobs:
       - name: Build with Analyze
         run: |
           xcodebuild -scheme swift-zip \
-            -destination "platform=iOS Simulator,name=iPhone 12 Pro,OS=latest" \
+            -destination "platform=iOS Simulator,name=iPhone 12,OS=latest" \
             -destination "platform=tvOS Simulator,name=Apple TV 4K (2nd generation),OS=latest" \
             -destination "platform=watchOS Simulator,name=Apple Watch Series 6 - 44mm,OS=latest" \
             analyze
       - name: Test
         run: |
           xcodebuild -scheme swift-zip \
-            -destination "platform=iOS Simulator,name=iPhone 12 Pro,OS=latest" \
+            -destination "platform=iOS Simulator,name=iPhone 12,OS=latest" \
             -destination "platform=tvOS Simulator,name=Apple TV 4K (2nd generation),OS=latest" \
             -destination "platform=watchOS Simulator,name=Apple Watch Series 6 - 44mm,OS=latest" \
             test-without-building
